--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                     <div>
                         <dt>Portfolio:</dt>
-                        <dd class="information"><a href="www.guillaume.com">https://www.portfoliogc.fr/</a></dd>
+                        <dd class="information"><a href="www.guillaume.com">www.portfoliogc.fr</a></dd>
                     </div>
                     
                 </dl>
